--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,7 @@
-<div class="jumbotron">
+<div class="header" style="margin-left: 150px;">
   <h1>OHHH SHII</h1>
-  <p>TTTTTT</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  
+  <form>
+  
+  </form>
 </div>
