--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,9 +1,9 @@
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img style="float:left" src="assets/images/cat.jpg" alt="cat" class="img-circle" width="200px" height="200px/">
+      <img style="float:left;" src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="300px/">
       <div class="caption">
-        <h3>Thumbnail label</h3>
+        <h3 style="margin-left: 105px;">Thumbnail label</h3>
         <p>...</p>
         <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
       </div>
