akbar user search to database

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,22 @@
+<div class="container">
+<div class="btn-group" role="group" aria-label="...">
+  <button type="button" class="btn btn-default">Profile</button>
+
+</div>
+
 <div class="jumbotron">
-  <h1>OHHH SHII</h1>
-  <p>TTTTTT</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+
+  <h1>BookFace</h1>
+  </div>
+
+
+<div class="input-group" style="width:400px;">
+  <form>
+	  <input id="inputpersonsearch" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+	  <span><button id="personSearch" type="submit">Search</button></span>
+  </form>
+   
+</div>
+
+
 </div>
