--- a/views/personresults.handlebars
+++ b/views/personresults.handlebars
@@ -11,10 +11,13 @@
       <img class="media-object" src="..." alt="...">
     </a>
   </div>
+  {{#each usersFound}}
   <div class="media-body">
-    <h4 class="media-heading">Middle aligned media</h4>
-    ...
+    <h4 class="media-heading">
+    {{this.name}}
+    </h4>
   </div>
+  {{/each}}
 </div>
 
 </div>
