attempting session storage

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,7 +3,8 @@
     <div class="thumbnail">
       <img style="float:left;" src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="300px/">
       <div class="caption">
-        <h3 style="margin-left: 105px;">Thumbnail label</h3>
+        <h3 style="margin-left: 105px;">{{this.name}}</h3>
+        <h2>{{this.email}}</h2>
         <p>...</p>
         <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
       </div>
