--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,10 +3,16 @@
     <div class="thumbnail">
       <img style="float:left;" src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="300px/">
       <div class="caption">
-        <h3 style="margin-left: 105px;">{{this.name}}</h3>
-        <h2>{{this.email}}</h2>
-        <p>...</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <h3 style="margin-left: 105px;">Name: {{this.name}}</h3>
+        <h2>Email Address: {{this.email}}</h2>
+        <h2>Description: {{this.description}} </h2>
+      </div>
+      <div>
+        <h1> {{this.username}}'s Wall</h1>
+        <div>
+          Need to decide how messages users wall will be displayed.
+        </div>
+      </div>
       </div>
     </div>
   </div>
