Ch ch ch changes

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,7 +3,7 @@
     <div class="thumbnail">
       <img style="float:left;" src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="300px/">
       <div class="caption">
-        <h3 style="margin-left: 105px;">Name: {{this.name}}</h3>
+        <h3 style="padding-top: 15px;">Name: {{this.name}}</h3>
         <h2>Email Address: {{this.email}}</h2>
         <h2>Description: {{this.description}} </h2>
       </div>
