--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,26 +1,36 @@
 <div class="container">
+	<h2 class="form-register-heading">Book Face Registration</h2>
+
+	{{#if errors}}
+		{{#each errors}}
+			<div class="alert alert-warning">{{msg}}</div>
+		{{/each}}
+	{{/if}}
 
 	<form action="/friend-book/register" method="POST" class="form-signin">
-		<h2 class="form-register-heading">Book Face Registration</h2>
+		<div class="form-group">
+		    <label for="inputName" class="sr-only">Name</label>
+		    <input type="text" name="name" id="inputName" class="form-control" placeholder="Name">
+		</div>
 		<div class="form-group">
 		    <label for="inputUsername" class="sr-only">Username</label>
-		    <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+		    <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username">
 		</div>
 		<div class="form-group">
 		    <label for="inputPassword" class="sr-only">Password</label>
-		    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+		    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password">
 		 </div>
 		 <div class="form-group">
 		    <label for="inputPassword2" class="sr-only">Password</label>
-		    <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Password" required>
+		    <input type="password" name="password2" id="inputPassword2" class="form-control" placeholder="Password">
 		 </div>
 		 <div class="form-group">
 		    <label for="inputEmail" class="sr-only">Email</label>
-		    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email" required>
+		    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email">
 		 </div>
 		 <div class="form-group">
 		    <label for="inputDescription" class="sr-only">Description</label>
-		    <input type="text" name="description" id="inputDescription" class="form-control" placeholder="Type something" required>
+		    <input type="text" name="description" id="inputDescription" class="form-control" placeholder="Type something">
 		 </div>
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 	</form>
