--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -32,7 +32,7 @@
 		    <label for="inputDescription" class="sr-only">Description</label>
 		    <input type="text" name="description" id="inputDescription" class="form-control" placeholder="Type something">
 		 </div>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
 	</form>
 
 </div> <!-- /container -->
