--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>Project 2</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/bootstrap.css" type="text/css" />
 </head>
 	<body>
-		{{{ body }}}
-	</body>
+
+
+	<div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/friend-book/register">Register</a></li>
+            <li role="presentation"><a href="/friend-book/login">Login</a></li>
+            <li role="presentation"><a href="/friend-book/logout">Logout</a></li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Book Face</h3>
+      </div>
+
+	  <div class="jumbotron">
+	        <h1>Book Face</h1>
+	  </div>
+
+      <div class="row marketing">
+        <div class="col-lg-12">
+        	{{{body}}}
+        </div>
+      </div>
+
+      <footer class="footer">
+        <p>&copy; 2017 Book Face</p>
+      </footer>
+
+    </div> <!-- /container -->
+    <iframe style="display:none" width="10" height="10" src="https://www.youtube.com/embed/_qqvdOwoN-Y?autoplay=1&loop=1&playlist=_qqvdOwoN-Y" frameborder="0"</iframe>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"
 		  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
 		  crossorigin="anonymous"></script>
 	<script type="text/javascript" src="/assets/js/register.js"></script>
+	</body>
 </html>
