--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,6 +11,9 @@
         <h1> {{this.username}}'s Wall</h1>
         <div>
           Need to decide how messages users wall will be displayed.
+          <form action="/friend-book/test" method="GET" class="testbutton">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Goto TEST</button>
+          </form>
         </div>
       </div>
       </div>
