--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,12 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.js"
 		  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
 		  crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js" ></script>
 
 	<script type="text/javascript" src="/assets/js/home.js"></script>
+	<script type="text/javascript" src="/assets/js/search.js"></script>
+	<script type="text/javascript" src="/assets/js/personresults.js"></script>
+	<script type="text/javascript" src="/assets/js/portfolio.js"></script>
+	<script type="text/javascript" src="/assets/js/register.js"></script>
 
 </html>
