--- a/views/personresults.handlebars
+++ b/views/personresults.handlebars
@@ -1,7 +1,8 @@
 <div class="container">
 <div class="header" style="margin-left: 150px;">
   <ul class="nav nav-tabs">
-  <li role="presentation" class="active"><a href="/friend-book/">Search</a></li>
+  <li role="presentation" ><a href="/friend-book/register">Home</a></li>
+  <li role="presentation" class="active"><a href="/friend-book/search">Search</a></li>
 	  <li role="presentation" ><a href="/friend-book/login">Login</a></li>
 	  <li role="presentation"><a href="/friend-book/register">Register</a></li>
   </ul>
@@ -9,7 +10,7 @@
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
-      <img class="media-object" src="..." alt="...">
+      <img class="media-object" alt="...">
     </a>
   </div>
   {{#each usersFound}}
