--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,7 @@
 <div class="container">
 <div class="header" style="margin-left: 150px;">
   <ul class="nav nav-tabs">
+  <li role="presentation" ><a href="/friend-book/">Home</a></li>
   	<li role="presentation"><a href="/friend-book/">Search</a></li>
 	  <li role="presentation" ><a href="/friend-book/login">Login</a></li>
 	  <li role="presentation" class="active"><a href="/friend-book/register">Register</a></li>
