--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,10 +12,14 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="/">Home</a></li>
-            <li role="presentation"><a href="/friend-book/register">Register</a></li>
-            <li role="presentation"><a href="/friend-book/login">Login</a></li>
-            <li role="presentation"><a href="/friend-book/logout">Logout</a></li>
+            	<li role="presentation"><a href="/">Home</a></li>
+            {{#if user}}
+            	<li role="presentation"><a href="/friend-book/profile">Profile</a></li>
+            	<li role="presentation"><a href="/friend-book/logout">Logout</a></li>
+            {{else}}
+            	<li role="presentation"><a href="/friend-book/register">Register</a></li>
+            	<li role="presentation"><a href="/friend-book/login">Login</a></li>
+            {{/if}}
           </ul>
         </nav>
         <h3 class="text-muted">Book Face</h3>
