--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,9 @@
 <div class="container">
 
+  {{#if success_msg}}
+    <div class="alert alert-success">{{success_msg}}</div>
+  {{/if}}
+  
   <form action="/friend-book/login" method="POST" class="form-signin">
     <h2 class="form-signin-heading">Please sign in</h2>
     <label for="inputUsername" class="sr-only">Username</label>
