--- a/views/searchedUser.handlebars
+++ b/views/searchedUser.handlebars
@@ -1,19 +1,2 @@
-{{#if people}}
-	{{#each people}}
-		<div class="media">
-		  <div class="media-left media-middle">
-		    <a href="#">
-		      <img class="media-object" src="..." alt="...">
-		    </a>
-		  </div>
-		  <div class="media-body">
-		    <h4 class="media-heading">{{this.name}}</h4>
-		    <h4 class="media-heading">{{this.email}}</h4>
-		  </div>
-		</div>
-		{{else}}
-		  <div class="media-body">
-		    <h4 class="media-heading">No one by that name.</h4>
-		  </div>
-	{{/each}}
-{{/if}}
+<div class="container">
+</div>
