--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,6 +44,7 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.js"
 		  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
 		  crossorigin="anonymous"></script>
-	<script type="text/javascript" src="/assets/js/register.js"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>	  
+	<script type="text/javascript" src="/assets/js/home.js"></script>
 	</body>
 </html>
