--- a/views/searchedUser.handlebars
+++ b/views/searchedUser.handlebars
@@ -1,2 +1,29 @@
-<div class="container">
-</div>
+{{#if people}}
+	{{#each people}}
+		<div class="media">
+		  <div class="media-left media-middle">
+		    <a href="#">
+		      <img class="media-object" src="/assets/images/hen.jpg" alt="hen">
+		    </a>
+		  </div>
+		  <div class="media-body">
+		    <h4 class="media-heading">{{this.name}}</h4>
+		    <h4 class="media-heading">{{this.email}}</h4>
+		    <form method="POST" action="/friend-book/profile">
+                <input type="hidden" name="profileID" value="{{this.id}}">
+                <button type="submit">Profile Page</button>
+            </form>
+	        <form method="POST" action"/friend-book/requests">
+                <input type="hidden" name="FriendID" value="{{this.id}}">
+                <button type="submit">I want to be friends</button>
+            </form>
+		  </div>
+		</div>
+		{{else}}
+		  <div class="media-body">
+		    <h4 class="media-heading">No one by that name</h4>
+		  </div>
+	{{/each}}
+{{/if}}
+
+var profileLink = $('<h4 class="media-heading"><a href="/friend-book/profile?member_id="' + data.id + '">Profile Page</a></h4>');
