--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,10 @@ body {
   padding-bottom: 20px;
 }
 
+.media-object{
+  width: 520px;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
