--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,12 +3,12 @@
     <div class="thumbnail">
       <img style="float:left;" src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="300px/">
       <div class="caption">
-        <h3 style="padding-top: 15px;">Name: {{this.name}}</h3>
-        <h2>Email Address: {{this.email}}</h2>
-        <h2>Description: {{this.description}} </h2>
+        <h3 style="padding-top: 15px;">Name: {{this.userInfo.name}}</h3>
+        <h2>Email Address: {{this.userInfo.email}}</h2>
+        <h2>Description: {{this.userInfo.description}} </h2>
       </div>
       <div>
-        <h1> {{this.username}}'s Wall</h1>
+        <h1> {{this.userInfo.username}}'s Wall</h1>
         <div>
           Need to decide how messages users wall will be displayed.
         </div>
