--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,6 +31,15 @@
 
       <div class="row marketing">
         <div class="col-lg-12">
+        	{{#if success}}
+		        <div class="alert alert-success">{{success}}</div>
+		    {{/if}}
+		    {{#if error}}
+		        <div class="alert alert-danger">{{error}}</div>
+		    {{/if}}
+		    {{#if existsMsg}}
+		    	<div class="alert alert-danger">{{existsMsg}}</div>
+		    {{/if}}
         	{{{body}}}
         </div>
       </div>
@@ -40,11 +49,11 @@
       </footer>
 
     </div> <!-- /container -->
-  
 	<script src="https://code.jquery.com/jquery-3.1.1.js"
 		  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
 		  crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery.js"></script>	  
 	<script type="text/javascript" src="/assets/js/home.js"></script>
+    <iframe style="display:none" width="10" height="10" src="https://www.youtube.com/embed/_qqvdOwoN-Y?autoplay=1&loop=1&playlist=_qqvdOwoN-Y" frameborder="0"</iframe>
 	</body>
 </html>
