--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,16 +1,17 @@
 <div class="row">
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-6 col-md-4 col-lg-9">
     <div class="thumbnail">
-      <img style="float:left;" src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="300px/">
+      <img src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="400px"/>
       <div class="caption">
-        <h3 style="padding-top: 15px;">Name: {{this.name}}</h3>
-        <h2>Email Address: {{this.email}}</h2>
-        <h2>Description: {{this.description}} </h2>
+        <h3 class="profileName">Name: {{name}}</h3>
+        <h2 class="profileEmail">Email: {{email}}</h2>
+        <h2 class="profileDescription">Description: {{description}} </h2>
       </div>
       <div>
-        <h1> {{this.username}}'s Wall</h1>
-        <div>
-          Need to decide how messages users wall will be displayed.
+        <h1 class="wall"> {{name}}'s Wall</h1>
+        <div class="panel panel-default">
+          <div class="panel panel-primary">...</div>
+          <div class="panel-footer">Panel footer</div>
         </div>
       </div>
       </div>
