--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
 <div class="header" style="margin-left: 150px;">
   <ul class="nav nav-tabs">
   <li role="presentation"><a href="/friend-book/register">Home</a></li>
-  	<li role="presentation"><a href="/friend-book/">Search</a></li>
+  	<li role="presentation"><a href="/friend-book/search">Search</a></li>
 	  <li role="presentation" class="active"><a href="/friend-book/login">Login</a></li>
 	  <li role="presentation"><a href="/friend-book/register">Register</a></li>
   </ul>
