fixed the profile search

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,12 +3,12 @@
     <div class="thumbnail">
       <img src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="400px"/>
       <div class="caption">
-        <h3 class="profileName">Name: {{this.userInfo.name}}</h3>
-        <h2 class="profileEmail">Email: {{this.userInfo.email}}</h2>
-        <h2 class="profileDescription">Description: {{this.userInfo.description}} </h2>
+        <h3 class="profileName">Name: {{userInfo.name}}</h3>
+        <h2 class="profileEmail">Email: {{userInfo.email}}</h2>
+        <h2 class="profileDescription">Description: {{userInfo.description}} </h2>
       </div>
       <div>
-        <h1 class="wall"> {{this.userInfo.name}}'s Wall</h1>
+        <h1 class="wall"> {{userInfo.name}}'s Wall</h1>
         <div class="panel panel-default">
           <div class="panel panel-primary">...</div>
           <div class="panel-footer">Panel footer</div>
