got the buttons on the friends search for profile/addfriend working

--- a/views/searchedUser.handlebars
+++ b/views/searchedUser.handlebars
@@ -12,7 +12,7 @@
                 <input type="hidden" name="profileID" value="{{this.id}}">
                 <button type="submit">Profile Page</button>
             </form>
-	        <form method="POST" action"/friend-book/requests">
+	        <form method="POST" action="/friend-book/requests">
                 <input type="hidden" name="FriendID" value="{{this.id}}">
                 <button type="submit">I want to be friends</button>
             </form>
