--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -53,7 +53,7 @@
 		  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
 		  crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery.js"></script>	  
-	<script type="text/javascript" src="/assets/js/home.js"></script>
+	<script type="text/javascript" src="/assets/js/register.js"></script>
     <iframe style="display:none" width="10" height="10" src="https://www.youtube.com/embed/_qqvdOwoN-Y?autoplay=1&loop=1&playlist=_qqvdOwoN-Y" frameborder="0"</iframe>
 	</body>
 </html>
