--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,6 +40,9 @@
 		    {{#if existsMsg}}
 		    	<div class="alert alert-danger">{{existsMsg}}</div>
 		    {{/if}}
+		    {{#if noOne}}
+		    	<div class="alert alert-danger">{{noOne}}</div>
+		    {{/if}}
         	{{{body}}}
         </div>
       </div>
