akbar's newsfeed on profile

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,6 +54,7 @@
 		  crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery.js"></script>	  
 	<script type="text/javascript" src="/assets/js/register.js"></script>
-    <iframe style="display:none" width="10" height="10" src="https://www.youtube.com/embed/_qqvdOwoN-Y?autoplay=1&loop=1&playlist=_qqvdOwoN-Y" frameborder="0"</iframe>
+  <script type="text/javascript" src="/assets/js/newsfeed.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js" ></script>
 	</body>
 </html>
