--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,6 +34,9 @@
         	{{#if success}}
 		        <div class="alert alert-success">{{success}}</div>
 		    {{/if}}
+		    {{#if request}}
+		        <div class="alert alert-danger">{{request}}</div>
+		    {{/if}}
 		    {{#if error}}
 		        <div class="alert alert-danger">{{error}}</div>
 		    {{/if}}
