--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,10 @@
 <div class="header" style="margin-left: 150px;">
   
+  <form action="/friend-book/search/all" method="GET">
+	  <button id="searchName" type="submit">Search All</button>
+  </form>
+
+
   <form action="/friend-book/search/user" method="POST">
 	  <input type="text" class="form-control-1" id="name" name="name" placeholder="Enter Name" aria-describedby="basic-addon1">
 	  <span class="input-group-addon-1" id="basic-addon1"><button id="searchName" type="submit">Search User</button></span>
