--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
  <div class="col-sm-6 col-md-4 col-lg-9">
    <div class="thumbnail">
-     <img src="/assets/images/hen.jpg" alt="cat" class="img-circle" width="400px" height="400px"/>
+     <img src="{{userInfo.img}}" style="height: 280px; padding-top: 20px" alt="cat" class="img-circle" width="400px" height="400px"/>
      <div class="caption">
        <h3 class="profileName">Name: {{userInfo.name}}</h3>
        <h2 class="profileEmail">Email: {{userInfo.email}}</h2>
