--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -33,6 +33,10 @@
 		    <label for="inputDescription" class="sr-only">Description</label>
 		    <input type="text" name="description" id="inputDescription" class="form-control" placeholder="Type something">
 		 </div>
+		 <div class="form-group">
+		    <label for="imageLink" class="sr-only">Image Link</label>
+		    <input type="text" name="img" id="imageLink" class="form-control" placeholder="Image">
+		 </div>
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
 	</form>
 
