--- a/views/searchedUser.handlebars
+++ b/views/searchedUser.handlebars
@@ -2,7 +2,7 @@
 	{{#each people}}
 		<div class="media">
 		  <div class="media-left media-middle">
-		      <img class="media-object" src="/assets/images/hen.jpg" alt="hen">
+		      <img class="media-object" src="{{this.img}}" alt="hen">
 		  </div>
 		  <div class="media-body">
 		    <h4 class="media-heading">{{this.name}}</h4>
