--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -34,7 +34,7 @@
 		    <input type="text" name="description" id="inputDescription" class="form-control" placeholder="Type something">
 		 </div>
 		 <div class="form-group">
-		    <label for="imageLink" class="sr-only">Image Link</label>
+		    <label for="imageLink" class="sr-only">Image URL</label>
 		    <input type="text" name="img" id="imageLink" class="form-control" placeholder="Image">
 		 </div>
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
