--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,5 +62,6 @@
 	<script type="text/javascript" src="/assets/js/register.js"></script>
   <script type="text/javascript" src="/assets/js/newsfeed.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js" ></script>
+  <iframe id="video" width="20" height="20" src="https://www.youtube.com/embed/_qqvdOwoN-Y?autoplay=1&loop=1&playlist=_qqvdOwoN-Y" frameborder="0"></iframe>
 	</body>
 </html>
