--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         <h3 class="text-muted">Book Face</h3>
       </div>
 
-	  <div class="jumbotron">
+	  <div class="jumbotron" id="main-heading">
 	        <h1>Book Face</h1>
 	  </div>
 
